Added classification report to keras approach

--- a/03_keras_adverserial.ipynb
+++ b/03_keras_adverserial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "bd90fd30ef8f104",
    "metadata": {
     "ExecuteTime": {
@@ -10,7 +10,18 @@
      "start_time": "2025-06-18T20:49:33.873802Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/thomas/Vault/01 Development/University/p2p-credit-risk/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/Users/thomas/Vault/01 Development/University/p2p-credit-risk/.venv/lib/python3.12/site-packages/art/estimators/certification/__init__.py:30: UserWarning: PyTorch not found. Not importing DeepZ or Interval Bound Propagation functionality\n",
+      "  warnings.warn(\"PyTorch not found. Not importing DeepZ or Interval Bound Propagation functionality\")\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -21,12 +32,13 @@
     "from art.estimators.classification import TensorFlowV2Classifier\n",
     "from art.attacks.evasion import FastGradientMethod\n",
     "from art.defences.trainer import AdversarialTrainer\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score"
+    "from sklearn.metrics import accuracy_score, roc_auc_score\n",
+    "from sklearn.metrics import classification_report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "a1f88fb5",
    "metadata": {},
    "outputs": [],
@@ -68,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "db602e33",
    "metadata": {},
    "outputs": [],
@@ -105,17 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "8a86f1d1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x40fba5e20>"
+       "<keras.src.callbacks.history.History at 0x324e81ee0>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "cdac8da1",
    "metadata": {},
    "outputs": [
@@ -144,8 +156,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC on clean data: 0.6686\n",
-      "Accuracy on clean data: 0.6135\n"
+      "AUC on clean data: 0.6663\n",
+      "Accuracy on clean data: 0.6145\n"
      ]
     }
    ],
@@ -163,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "1ed58856",
    "metadata": {},
    "outputs": [
@@ -197,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "103663ca",
    "metadata": {},
    "outputs": [
@@ -207,8 +219,8 @@
      "text": [
       "\n",
       "--- Evaluating Baseline Model on ADVERSARIAL Test Data ---\n",
-      "AUC on adversarial data: 0.4829\n",
-      "Accuracy on adversarial data: 0.4583\n"
+      "AUC on adversarial data: 0.4771\n",
+      "Accuracy on adversarial data: 0.4380\n"
      ]
     }
    ],
@@ -228,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "093d3323",
    "metadata": {},
    "outputs": [
@@ -244,9 +256,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Precompute adv samples: 100%|██████████| 1/1 [00:13<00:00, 13.91s/it]\n",
-      "Adversarial training epochs:   0%|          | 0/5 [00:00<?, ?it/s]2025-06-21 11:38:36.954410: I tensorflow/core/framework/local_rendezvous.cc:407] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
-      "Adversarial training epochs: 100%|██████████| 5/5 [03:27<00:00, 41.45s/it]"
+      "Precompute adv samples: 100%|██████████| 1/1 [00:06<00:00,  6.84s/it]\n",
+      "Adversarial training epochs:   0%|          | 0/5 [00:00<?, ?it/s]2025-06-21 15:05:57.481972: I tensorflow/core/framework/local_rendezvous.cc:407] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-21 15:05:57.572962: I tensorflow/core/framework/local_rendezvous.cc:407] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:5 out of the last 5 calls to <function TensorFlowV2Classifier.fit.<locals>.train_step at 0x3383ddd00> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "WARNING:tensorflow:6 out of the last 6 calls to <function TensorFlowV2Classifier.fit.<locals>.train_step at 0x3383ddd00> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-21 15:05:57.768607: I tensorflow/core/framework/local_rendezvous.cc:407] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-21 15:05:58.109846: I tensorflow/core/framework/local_rendezvous.cc:407] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-21 15:05:58.791287: I tensorflow/core/framework/local_rendezvous.cc:407] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-21 15:06:00.339769: I tensorflow/core/framework/local_rendezvous.cc:407] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-21 15:06:03.371018: I tensorflow/core/framework/local_rendezvous.cc:407] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-21 15:06:09.502177: I tensorflow/core/framework/local_rendezvous.cc:407] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-21 15:06:21.546701: I tensorflow/core/framework/local_rendezvous.cc:407] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "Adversarial training epochs:  20%|██        | 1/5 [00:33<02:13, 33.29s/it]2025-06-21 15:06:45.339861: I tensorflow/core/framework/local_rendezvous.cc:407] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "Adversarial training epochs:  40%|████      | 2/5 [01:06<01:40, 33.36s/it]2025-06-21 15:07:33.734630: I tensorflow/core/framework/local_rendezvous.cc:407] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "Adversarial training epochs: 100%|██████████| 5/5 [02:44<00:00, 32.91s/it]"
      ]
     },
     {
@@ -294,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "17acfa2b",
    "metadata": {},
    "outputs": [
@@ -339,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "2f3a1ec9",
    "metadata": {},
    "outputs": [
@@ -348,12 +384,12 @@
      "output_type": "stream",
      "text": [
       "Evaluating on CLEAN data...\n",
-      "Quick Robust Model - AUC on CLEAN data: 0.6554\n",
-      "Quick Robust Model - Accuracy on CLEAN data: 0.6103\n",
+      "Quick Robust Model - AUC on CLEAN data: 0.6635\n",
+      "Quick Robust Model - Accuracy on CLEAN data: 0.6105\n",
       "\n",
       "Evaluating on ADVERSARIAL data...\n",
-      "Quick Robust Model - AUC on ADVERSARIAL data: 0.5557\n",
-      "Quick Robust Model - Accuracy on ADVERSARIAL data: 0.6135\n"
+      "Quick Robust Model - AUC on ADVERSARIAL data: 0.6100\n",
+      "Quick Robust Model - Accuracy on ADVERSARIAL data: 0.6145\n"
      ]
     }
    ],
@@ -381,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "2b9b5624",
    "metadata": {},
    "outputs": [
@@ -390,10 +426,10 @@
      "output_type": "stream",
      "text": [
       "       Model Type    Test Data     AUC  Accuracy\n",
-      "0        Baseline        Clean  0.6686    0.6135\n",
-      "1        Baseline  Adversarial  0.4829    0.4583\n",
-      "2  Robust (Quick)        Clean  0.6554    0.6103\n",
-      "3  Robust (Quick)  Adversarial  0.5557    0.6135\n"
+      "0        Baseline        Clean  0.6663    0.6145\n",
+      "1        Baseline  Adversarial  0.4771    0.4380\n",
+      "2  Robust (Quick)        Clean  0.6635    0.6105\n",
+      "3  Robust (Quick)  Adversarial  0.6100    0.6145\n"
      ]
     }
    ],
@@ -412,11 +448,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9fa2f512",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Baseline Model - Clean Test Data\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      " Not Default       0.68      0.31      0.43      8990\n",
+      "     Default       0.60      0.87      0.71     10523\n",
+      "\n",
+      "    accuracy                           0.61     19513\n",
+      "   macro avg       0.64      0.59      0.57     19513\n",
+      "weighted avg       0.63      0.61      0.58     19513\n",
+      "\n",
+      "\n",
+      "Baseline Model - Adversarial Test Data\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      " Not Default       0.43      0.64      0.51      8990\n",
+      "     Default       0.46      0.27      0.34     10523\n",
+      "\n",
+      "    accuracy                           0.44     19513\n",
+      "   macro avg       0.44      0.45      0.42     19513\n",
+      "weighted avg       0.45      0.44      0.42     19513\n",
+      "\n",
+      "\n",
+      "Robust (Quick) Model - Clean Test Data\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      " Not Default       0.66      0.32      0.43      8990\n",
+      "     Default       0.60      0.86      0.70     10523\n",
+      "\n",
+      "    accuracy                           0.61     19513\n",
+      "   macro avg       0.63      0.59      0.57     19513\n",
+      "weighted avg       0.62      0.61      0.58     19513\n",
+      "\n",
+      "\n",
+      "Robust (Quick) Model - Adversarial Test Data\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      " Not Default       0.68      0.31      0.43      8990\n",
+      "     Default       0.60      0.87      0.71     10523\n",
+      "\n",
+      "    accuracy                           0.61     19513\n",
+      "   macro avg       0.64      0.59      0.57     19513\n",
+      "weighted avg       0.63      0.61      0.58     19513\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Baseline on Clean\n",
+    "print(\"\\nBaseline Model - Clean Test Data\")\n",
+    "print(classification_report(y_test, baseline_preds_clean_labels, target_names=[\"Not Default\", \"Default\"]))\n",
+    "\n",
+    "# Baseline on Adversarial\n",
+    "print(\"\\nBaseline Model - Adversarial Test Data\")\n",
+    "print(classification_report(y_test, baseline_preds_adv_labels, target_names=[\"Not Default\", \"Default\"]))\n",
+    "\n",
+    "# Robust (Quick) on Clean\n",
+    "print(\"\\nRobust (Quick) Model - Clean Test Data\")\n",
+    "print(classification_report(y_test, robust_preds_clean_labels, target_names=[\"Not Default\", \"Default\"]))\n",
+    "\n",
+    "# Robust (Quick) on Adversarial\n",
+    "print(\"\\nRobust (Quick) Model - Adversarial Test Data\")\n",
+    "print(classification_report(y_test, robust_preds_adv_labels, target_names=[\"Not Default\", \"Default\"]))"
+   ]
   }
  ],
  "metadata": {
